[package]
name = "playlist_randomizer"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tiny_http = "0.12.0"
url = "2.5.7"
